<resources>
    <string name="app_name">GamePulse</string>
    <string name="favorite_achievement">Favorite Achievement</string>
    <string name="achievement_icon">Achievement Icon</string>
    <string name="achievement_title">Achievements</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="library_title">Library Screen</string>
    <string name="recent">Recent</string>
    <string name="current">Current</string>
    <string name="beaten">Beaten</string>
    <string name="new_category">New</string>
    <string name="sort_icon">Sort Icon</string>
    <string name="game_cover">Game Cover</string>
    <string name="delete_achievement">Delete Achievement</string>
    <string name="progress_text">Progress: %1$d/%2$d</string>
    <string name="achievement_description">Achievement Description</string>
    <string name="progress_format">Progress: %1$d/%2$d</string>
    <string name="achievement_title_hint">Achievement Title</string>
    <string name="achievement_description_hint">Achievement Description</string>
    <string name="current_progress_hint">Current Progress</string>
    <string name="total_needed_hint">Total Needed</string>
    <string name="save_button_text">Save</string>
    <string name="search_achievements_hint">Search Achievements</string>
    <string name="add_achievement_button_text">Add Achievement</string>
    <string name="search_hint">Search Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="delete">Delete</string>
    <string name="game_title">Game Title</string>
    <string name="sort_options_label">Sort Options</string>



    <!-- Sorting Options -->
    <string-array name="sort_options">
        <item>Alphabetically</item>
        <item>Percentage Earned</item>
        <item>Earned</item>
        <item>Not Earned</item>
    </string-array>
</resources>
